<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:maxLines="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/inpu_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/output_text"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/text_printed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/edit_text"
        android:layout_marginBottom="8dp"
        android:id="@+id/button_chenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_switch"
        android:text="@string/move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>